# pynotion

./: README.md  pyproject.toml
notion_python/blocks/: __init__.py
notion_python/database/: __init__.py
notion_python/source_connector/: README.md
notion_python/source_connector/notion_db/: connector.py  dataclasses.py
