[tool.poetry]
name = "notion-python"
version = "0.1.0"
description = ""
authors = ["Toby <40096033+tobytoyin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.15.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
